# MAGIC

./: Readme.txt
correlated_Gaussian/: CMakeLists.txt  MAGIC.cxx  MAGIC.h  Readme.txt  gaussian_distribution.h  run-contour.cxx
correlated_Gaussian/data/: Readme.txt  readme.txt
correlated_Gaussian/linalg/: ucv_matrix_static_2by2.h
crossing_probability_entropy/: CMakeLists.txt  MVGaussianTemp.hpp  Readme.txt  compute-crossing-probability-entropy.cxx
eigen_based_crossing_probability_entropy/: CMakeLists.txt  EntropyAdaptiveEigens.hpp  ExtractingMeanStdev.hpp  Readme.txt  eigen-based-compute-crossing-probability-entropy.cxx
independent_Gaussian/: CMakeLists.txt  LICENSE.txt  MAGIC.cxx  MAGIC.h  Readme.txt  gaussian_distribution.cxx  gaussian_distribution.h  run-contour.cxx
independent_uniform/: CMakeLists.txt  MCA_INDEPENDENT_UNIFORM.cxx  MCA_INDEPENDENT_UNIFORM.h  Readme.txt  run-contour.cxx  uniform_even_z_density.cxx  uniform_even_z_density.h  uniform_kernel_polynomial.cxx  uniform_kernel_polynomial.h
kde_correlated_Gaussian/: CMakeLists.txt  KDE_MAGIC.cxx  KDE_MAGIC.h  Readme.txt  gaussian_distribution.cxx  gaussian_distribution.h  run-contour.cxx
kde_independent_Gaussian/: KDE_MAGIC.cxx  KDE_MAGIC.h  Readme.txt  gaussian_distribution.cxx  gaussian_distribution.h  run-contour.cxx
kde_independent_uniform/: CMakeLists.txt  MCA_KDE_INDEPENDENT_UNIFORM.cxx  MCA_KDE_INDEPENDENT_UNIFORM.h  Readme.txt  kdeWithUniformKernel.cxx  kdeWithUniformKernel.h  run-contour.cxx
kde_independent_uniform/data/: tangle_correlation_one_3.vtk  tangle_correlation_one_5.vtk
(+11 files in other folders)
